added ARIA roles
added two more ARIA roles and added "hi" in Korean in alert msg.

--- a/examples/button/button.html
+++ b/examples/button/button.html
@@ -66,6 +66,16 @@
       </thead>
       <tbody>
         <tr>
+          <td>button</td>
+          <td></td>
+          <td>button</td>
+          <td>
+            <ul>
+              <li>Identify element with the button behavior</li>
+            </ul>  
+          </td>
+        </tr>
+        <tr>
           <td>link</td>
           <td>aria-pressed</td>
           <td>span</td>
@@ -73,6 +83,16 @@
             <ul>
               <li>Identify element with the button behavior</li>
               <li><code>aria-pressed</code> used for "mute" toggle button state information</li>
+            </ul>  
+          </td>
+        </tr>
+        <tr>
+          <td>button</td>
+          <td></td>
+          <td>div</td>
+          <td>
+            <ul>
+              <li>Identify element with the button behavior</li>
             </ul>  
           </td>
         </tr>
