added example links

--- a/examples/coding-template/template2.html
+++ b/examples/coding-template/template2.html
@@ -21,10 +21,10 @@
     <p class="annotate">Coding examples using this template can be found : </p>
     <ul>
       <li>
-        button.html
+        <a href="../button/button.html">button.html </a>
       </li>
       <li>
-        link.html
+        <a href="../link/link.html">link.html </a>
       </li>
     </ul>
 
