added the link to example coding
added a link to checkbox

--- a/examples/coding-template/template3.html
+++ b/examples/coding-template/template3.html
@@ -20,7 +20,7 @@
     <p class="annotate">Coding examples using this template can be found : </p>
     <ul>
       <li>
-        checkbox.html
+        <a href="../checkbox/checkbox-1.html">checkbox.html
       </li>
     </ul>
 
