--- a/examples/checkbox/checkbox-3.html
+++ b/examples/checkbox/checkbox-3.html
@@ -16,7 +16,7 @@
           <li>This example illustrates the use of a mixed state checkbox (e.g. all condiments) with a set of standard HTML checkboxes (e.g, condiments options). </li>
           <li>Changing the state of the standard checkboxes will update the state fo the ARIA mixed checkbox. </li> 
           <li>Changing the state of the ARIA mixed checkbox will also update the state of the standard HTML checkboxes.</li>
-          <li><code>role = "checkbox"</code> is not applied to the standard checkboxed but is to the aria checkbox</li>
+          <li><code>role="checkbox"</code> is not applied to the standard checkboxes but is to the aria checkbox.</li>
       </ul>
       
       <p> <a href="../../aria-practices.html#checkbox">More information on Checkbox pattern</a></p>
@@ -73,11 +73,12 @@
       </div>
       <h2 id="id_a11yfeature">Accessibility Feature</h2>
              <ul>
-                <li><code>div[role=checkbox]</code> element identifies the <code>div</code>code> element as  a mixed state checkbox (e.g. All Condiments checkbox).</li>
-                <li><code> aria-labelledby</code> attribute is used to identify the grouping label (e.g. Sandwitch Condiments)for all of the checkboxes.  Note: grouping label is the second Id so that grouping label is read after checkbox label. So screen reader users hear checkbox label before the grouping label. </li> 
+                <li><code>div[role=checkbox]</code> element identifies the <code>div
+                </code>element as  a mixed state checkbox (e.g. All Condiments checkbox).</li>
+                <li><code> aria-labelledby</code> attribute is used to identify the grouping label(e.g. Sandwitch Condiments) for all of the checkboxes.  <br/>Note: grouping label is the second Id so that grouping label is read after checkbox label. So screen reader users hear checkbox label before the grouping label. </li> 
                 <li><code>div[role=checkbox]</code> element has <code>onkeydown</code> event to support keyboard activation of the checkbox.</li>
-                <li><code>div[role=checkbox]</code> element has <code>tabindex="0"</code> to become part of tab order of the page.</li>
-                <li><code>img</code> element is used to visually indicate the state of mixed checkbox because using css techniqes or generated content result in visual state disappearing when browsers or operating systems are configured to display high contrast themes. </li>
+                <li><code>div[role=checkbox]</code> element has <code>tabindex="0"</code> to become part of the tab order of the page.</li>
+                <li><code>img</code> element is used to visually indicate the state of mixed checkbox because using css techniques or generated content result in visual state disappearing when browsers or operating systems are configured to display high contrast themes. </li>
                 <li><code>toggleGroupCheckbox(event)</code> uses <code>aria-checked</code> attribute to make sure the information communicated to asssitive tecnology is the same as the visual state (e.g. <code>img </code>element). </li>
                 <li><code>onfocus</code>  and <code>onblur</code> event handlers on both aria checkbox and standard HTML checkboxes support visual focus styling for keyboard only users.</li>
                 
@@ -118,7 +119,7 @@
             <td>checkbox</td>
             <td></td>
             <td>
-              Identify div as Checkbox widget.
+              Identify div as Checkbox widget
             </td>
           </tr>
           <tr>
