--- a/examples/checkbox/checkbox-3.html
+++ b/examples/checkbox/checkbox-3.html
@@ -14,7 +14,7 @@
       <h1>ARIA <code>checkbox</code> Role Example: Mixed state checkbox</h1>
       <ul>
           <li>This example illustrates the use of a mixed state checkbox (e.g. all condiments) with a set of standard HTML checkboxes (e.g, condiments options). </li>
-          <li>Changing the state of the standard checkboxes will update the state fo the ARIA mixed checkbox. </li> 
+          <li>Changing the state of the standard checkboxes will update the state for the ARIA mixed checkbox. </li> 
           <li>Changing the state of the ARIA mixed checkbox will also update the state of the standard HTML checkboxes.</li>
           <li><code>role="checkbox"</code> is not applied to the standard checkboxes but is to the aria checkbox.</li>
       </ul>
