used fieldset and legend
removed aria labelledby

--- a/examples/checkbox/checkbox-3.html
+++ b/examples/checkbox/checkbox-3.html
@@ -20,13 +20,12 @@
       </ul>
       
       <p> <a href="../../aria-practices.html#checkbox">More information on Checkbox pattern</a></p>
-      <div  class="group" id="example">
-          <h3 id="gdesc1">Sandwich Condiments</h3>
+      <fieldset class="group" id="example">
+          <legend>Sandwich Condiments</legend> 
           <div id="gcb1"
               role="checkbox" 
               class="group_checkbox"
               aria-checked="false" 
-              aria-labelledby="gcb1 gdesc1"
               tabindex="0"
               onclick="toggleGroupCheckbox(event)" 
               onkeydown="toggleGroupCheckbox(event)" 
@@ -41,7 +40,6 @@
             <input type="checkbox" 
                 id="desc1" 
                 value="lettuce" 
-                aria-labelledby="desc1 gdesc1"
                 >
               Lettuce
            </label>
@@ -50,7 +48,6 @@
            <input type="checkbox" 
                id="desc2 " 
                value="tomato" 
-               aria-labelledby="desc2 gdesc1"
                >
               Tomato
           </label>
@@ -59,7 +56,6 @@
            <input type="checkbox" 
               id="desc3" 
               value="mustard"
-              aria-labelledby="desc3 gdesc1"
               >
               Mustard
           </label>
@@ -67,10 +63,10 @@
           <input type="checkbox" 
               id="desc4" 
               value="sprouts"
-              aria-labelledby="desc4 gdesc1">
+              >
               Sprouts
           </label> 
-      </div>
+      </fieldset>
       <h2 id="id_a11yfeature">Accessibility Feature</h2>
              <ul>
                 <li><code>div[role=checkbox]</code> element identifies the <code>div
