removed alt attribute
it causes bizarre to screen reader.

--- a/examples/checkbox/checkbox-3.html
+++ b/examples/checkbox/checkbox-3.html
@@ -36,7 +36,7 @@
                   onfocus="focusCheckbox(event)" 
                   onblur="blurCheckbox(event)"
               >
-                <img src="./images/checkbox-unchecked-black.png" alt="unchecked checkbox">
+                <img src="./images/checkbox-unchecked-black.png" alt="">
                 All condiments
             </div>
             <label><input type="checkbox" id="desc1">Lettuce</label>
