--- a/examples/checkbox/checkbox-3.html
+++ b/examples/checkbox/checkbox-3.html
@@ -14,7 +14,7 @@
       <h1>ARIA <code>checkbox</code> Role Example: Mixed state checkbox</h1>
     <p> <a href="../../aria-practices.html#checkbox">WAI-ARIA 1.1 : Checkbox pattern </a></p>
       <ul>
-          <li>This example illustrates the use of a mixed state checkbox (e.g. all condiments) with a set of standard HTML checkboxes (e.g, condiments options). </li>
+          <li>This example illustrates the use of a mixed state checkbox (e.g. all condiments) with a set of standard HTML checkboxes, <code>input type="checkbox"</code> (e.g, condiments options). </li>
           <li>Changing the state of the standard checkboxes will update the state for the ARIA mixed checkbox. </li> 
           <li>Changing the state of the ARIA mixed checkbox will also update the state of the standard HTML checkboxes.</li>
           <li><code>role="checkbox"</code> is not applied to the standard checkboxes but is to the aria checkbox</li>
@@ -24,9 +24,10 @@
       <div  class="group" id="example"> 
       <h3>1. Checkbox example with <code>fieldset</code> and <code>legend</code></h3>
           <ul>
-              <li>Grouping label (e.g. sandwich Condiments) comes from <code>fieldset/ legend </code>element. </li>
-              <li>This techinique uses label encapsulation.</li>
-              <li>It is up to screen reader when the grouping labels will be read or not.</li> 
+              <li>Grouping label "sandwich Condiments", from <code>fieldset/legend </code>element </li>
+              <li>Labels for standard checkboxes come from <code>label</code> encapsulation</li>
+              <li>Label for ARIA mixed checkbox comes from child text content of the element with <code>[role=checkbox]</code></li>
+              <li>Note: It is at the discretion of screen readers to determine when grouping labels are spoken</li>
           </ul>    
       <div id="ex1">
        <fieldset>
@@ -53,8 +54,10 @@
 
       <h3>2. Checkbox example with <code>role = group</code></h3>
           <ul>
-              <li>Grouping label comes from <code>role ="group"</code>.</li>
-              <li>It is up to screen reader when the grouping labels will be read or not.</li> 
+              <li>Grouping label “sandwich condiments”, from the element with <code>[role=group]</code> and <code>[aria-label]</code>.</li>
+              <li>Labels for standard checkboxes come from <code>label</code> encapsulation.</li>
+              <li>Label for ARIA mixed checkbox comes from child text content of the element with <code>[role=checkbox]</code>.</li>
+              <li>Note: It is at the discretion of screen readers to determine when grouping labels are spoken.</li>
           </ul> 
       <div id="ex2">
       <div role="group"
@@ -82,9 +85,10 @@
 
       <h3>3. Checkbox example with <code>aria-labelledby </code></h3>
           <ul>
-              <li>No grouping label is used but grouping label comes from as part of accessible name.</li>
-              <li>This technique forces screen reader to read grouping label.</li>
-              <li>If there is a long list of controls, it can be redunant and problematic since grouping lable will be read with every controls.</li>
+              <li>No grouping label is used.</li>
+              <li>Labels for standard checkboxes come from <code>aria-labelledby</code> referencing the group label (e.g. “sandwich condiments”) and <code>span</code> element following the checkbox.</li>
+              <li>Label for ARIA mixed checkbox comes from <code>aria-labelledby</code> referencing the group label (e.g. “sandwich condiments”) and <code>span</code> element following the <code>[role=checkbox]</code> element.</li>
+              <li>Note: The screen readers will always include the grouping label (e.g. “sandwich condiments”) when a checkbox receives keyboard focus, which can be distracting when navigating a long list of controls in the same group.</li>
           </ul> 
       <div id="ex3">
       <div id="group1">Sandwich Condiments</div>
@@ -129,15 +133,13 @@
 
       <h2 id="id_a11yfeature">Accessibility Feature</h2>
              <ul>
-                <li><code>div[role=checkbox]</code> element identifies the <code>div
-                </code>element as  a mixed state checkbox (e.g. All Condiments checkbox).</li>
-                <li><code> aria-labelledby</code> attribute is used to identify the grouping label(e.g. Sandwitch Condiments) for all of the checkboxes.  <br/>Note: grouping label is the second Id so that grouping label is read after checkbox label. So screen reader users hear checkbox label before the grouping label. </li> 
+                <li><code> div[role=checkbox] </code>element identifies the <code>div</code> element as a checkbox (e.g. All Condiments checkbox), which supports a mixed state.</li>
                 <li><code>div[role=checkbox]</code> element has <code>onkeydown</code> event to support keyboard activation of the checkbox.</li>
+                <li><code>div[role=checkbox]</code> element has <code>onclick</code> event to support mouse pointer activation of the checkbox.</li>
                 <li><code>div[role=checkbox]</code> element has <code>tabindex="0"</code> to become part of the tab order of the page.</li>
-                <li><code>img</code> element is used to visually indicate the state of mixed checkbox because using css techniques or generated content result in visual state disappearing when browsers or operating systems are configured to display high contrast themes. </li>
-                <li><code>toggleGroupCheckbox(event)</code> uses <code>aria-checked</code> attribute to make sure the information communicated to asssitive tecnology is the same as the visual state (e.g. <code>img </code>element). </li>
-                <li><code>onfocus</code>  and <code>onblur</code> event handlers on both aria checkbox and standard HTML checkboxes support visual focus styling for keyboard only users.</li>
-                
+                <li> <code>img</code> element is used to visually indicate the state of checkbox (e.g. checked, mixed, unchecked) to ensure the visual state will be visible when browsers or operating system use “High Contrast” settings by people with visual impairments. (Note: CSS background image techniques or generated content result in visual state disappearing when browsers or operating systems are configured to display high contrast themes.)
+               <li><code>toggleGroupCheckbox(event)</code> uses <code>aria-checked</code> attribute to determine which image is displayed to ensure the information communicated to asssitive tecnology is the same as the visual state (e.g. <code>img</code> element).</li>
+                <li><code> onfocus</code> and <code> onblur</code> event handlers on both aria checkbox and standard HTML checkboxes support visual focus styling for keyboard only users.</li>
               </ul>
 
       <h2 id="id_kbd">Keyboard Support</h2>
