--- a/examples/checkbox/checkbox-3.html
+++ b/examples/checkbox/checkbox-3.html
@@ -131,7 +131,7 @@
     </div>
 
 
-      <h2 id="id_a11yfeature">Accessibility Feature</h2>
+      <h2 id="id_a11yfeature">Common Accessibility Features</h2>
              <ul>
                 <li><code> div[role=checkbox] </code>element identifies the <code>div</code> element as a checkbox (e.g. All Condiments checkbox), which supports a mixed state.</li>
                 <li><code>div[role=checkbox]</code> element has <code>onkeydown</code> event to support keyboard activation of the checkbox.</li>
