--- a/examples/checkbox/checkbox-3.html
+++ b/examples/checkbox/checkbox-3.html
@@ -11,23 +11,26 @@
   </head>
   <body>
     <main role="main">
-      <h1>ARIA <code>checkbox</code> Role Example: Mixed state checkbox</h1>
+      <h1>ARIA <code>checkbox</code>: Mixed State Checkbox with Grouping Label</h1>
     <p> <a href="../../aria-practices.html#checkbox">WAI-ARIA 1.1 : Checkbox pattern </a></p>
       <ul>
+          <li>This example uses the native HTML5 sematics for grouping (e.g. fieldset/legend) and is the preferred technique for accessibility.</li>
           <li>This example illustrates the use of a mixed state checkbox (e.g. all condiments) with a set of standard HTML checkboxes, <code>input type="checkbox"</code> (e.g, condiments options). </li>
+          <li>This set of example also illustrates three different techniques for providing a grouping labeling.</li>
           <li>Changing the state of the standard checkboxes will update the state for the ARIA mixed checkbox. </li> 
           <li>Changing the state of the ARIA mixed checkbox will also update the state of the standard HTML checkboxes.</li>
-          <li><code>role="checkbox"</code> is not applied to the standard checkboxes but is to the aria checkbox</li>
+          <li><code>role="checkbox"</code> is only applied to the ARIA mixed checkbox.</li>
+
       </ul>
 
       <h2> Checkbox Examples</h2>
       <div  class="group" id="example"> 
       <h3>1. Checkbox example with <code>fieldset</code> and <code>legend</code></h3>
           <ul>
-              <li>Grouping label "sandwich Condiments", from <code>fieldset/legend </code>element </li>
-              <li>Labels for standard checkboxes come from <code>label</code> encapsulation</li>
-              <li>Label for ARIA mixed checkbox comes from child text content of the element with <code>[role=checkbox]</code></li>
-              <li>Note: It is at the discretion of screen readers to determine when grouping labels are spoken</li>
+              <li>Grouping label "sandwich condiments" is defined using <code>fieldset/legend </code>elements.</li>
+              <li>Labels for standard checkboxes come from <code>label</code> encapsulation technique.</li>
+              <li>Label for ARIA mixed checkbox comes from child text content of the element with <code>[role=checkbox]</code>.</li>
+              <li>Note: It is at the discretion of screen readers to determine when grouping labels are spoken. </li>
           </ul>    
       <div id="ex1">
        <fieldset>
@@ -54,8 +57,8 @@
 
       <h3>2. Checkbox example with <code>role = group</code></h3>
           <ul>
-              <li>Grouping label “sandwich condiments”, from the element with <code>[role=group]</code> and <code>[aria-label]</code>.</li>
-              <li>Labels for standard checkboxes come from <code>label</code> encapsulation.</li>
+              <li>Grouping label “sandwich condiments” defined using <code>[role=group]</code> and <code>[aria-label]</code>.</li>
+              <li>Labels for standard checkboxes come from <code>label</code> encapsulation technique.</li>
               <li>Label for ARIA mixed checkbox comes from child text content of the element with <code>[role=checkbox]</code>.</li>
               <li>Note: It is at the discretion of screen readers to determine when grouping labels are spoken.</li>
           </ul> 
@@ -85,10 +88,10 @@
 
       <h3>3. Checkbox example with <code>aria-labelledby </code></h3>
           <ul>
-              <li>No grouping label is used.</li>
-              <li>Labels for standard checkboxes come from <code>aria-labelledby</code> referencing the group label (e.g. “sandwich condiments”) and <code>span</code> element following the checkbox.</li>
-              <li>Label for ARIA mixed checkbox comes from <code>aria-labelledby</code> referencing the group label (e.g. “sandwich condiments”) and <code>span</code> element following the <code>[role=checkbox]</code> element.</li>
-              <li>Note: The screen readers will always include the grouping label (e.g. “sandwich condiments”) when a checkbox receives keyboard focus, which can be distracting when navigating a long list of controls in the same group.</li>
+              <li>No grouping label is defined for this example. "sandwitch condiments" is included as part of label for each checkbox.</li>
+              <li>Labels for standard checkboxes and ARIA mixed checkbox come from <code>aria-labelledby</code> referencing <code>div</code> element, ''sandwitch condiments" and following <code>span</code> element (e.g. "all condiments", "lettuce", "tomato", "mustard", "sprouts").</li>
+              <li>It is important that grouping label, "sandwitch condiments" is the second reference so that each different condiment option label (e.g. "lettuce") is read first and the same grouping label (e.g. "sandwitch condiments") is read the second (e.g. <code>aria-labelledby="label1 group1"</code> will be read "lettuce, sandwitch condiments").</li>
+              <li>Note: The screen readers will always include “sandwich condiments” (e.g. grouping label) when a checkbox receives keyboard focus, which can be distracting when navigating a long list of controls in the same group.</li>
           </ul> 
       <div id="ex3">
       <div id="group1">Sandwich Condiments</div>
@@ -107,22 +110,22 @@
             <span id="label0"> All condiments</span>
           </div>
 
-          <div>
+          <div class ="checkbox">
             <input type="checkbox" aria-labelledby="label1 group1">
             <span id="label1">Lettuce</span>
           </div>
          
-          <div> 
+          <div class ="checkbox">
             <input type="checkbox" aria-labelledby="label2 group1">
             <span id="label2"> Tomato</span>
           </div>
           
-          <div> 
+          <div class ="checkbox"> 
             <input type="checkbox" aria-labelledby="label3 group1">
             <span id="label3">Mustard</span>
           </div>
 
-          <div>
+          <div class ="checkbox">
             <input type="checkbox" aria-labelledby="label4 group1">
             <span id="label4"> Sprouts</span>
           </div>
@@ -133,7 +136,8 @@
 
       <h2 id="id_a11yfeature">Common Accessibility Features</h2>
              <ul>
-                <li><code> div[role=checkbox] </code>element identifies the <code>div</code> element as a checkbox (e.g. All Condiments checkbox), which supports a mixed state.</li>
+                 <li>The examples use the native HTML5 sematics for checkboxes when possible (e.g. the non-mixed state checkboxes) and is the preferred technique for defining checkbox inputs.</li>
+                <li><code> div[role=checkbox]</code> element identifies the <code>div</code> element as a checkbox (e.g. All Condiments checkbox), which supports a mixed state.</li>
                 <li><code>div[role=checkbox]</code> element has <code>onkeydown</code> event to support keyboard activation of the checkbox.</li>
                 <li><code>div[role=checkbox]</code> element has <code>onclick</code> event to support mouse pointer activation of the checkbox.</li>
                 <li><code>div[role=checkbox]</code> element has <code>tabindex="0"</code> to become part of the tab order of the page.</li>
