aria role, property and state edit

--- a/examples/radio/radio-1.html
+++ b/examples/radio/radio-1.html
@@ -103,6 +103,15 @@
             </td>
           </tr>
           <tr>
+            <td>Radiogroup</td>
+            <td>aria-labelledby</td>
+            <td>
+                 <ul>
+                  <li>Used to identify radio group</li>
+                 </ul>
+            </td>
+          </tr>
+          <tr>
             <td>Radio</td>
             <td>aria-checked</td>
             <td>
@@ -113,15 +122,6 @@
                       <li>Unchecked  (e.g. aria-checked=false)</li>
                     </ul>  
                 </ul>
-            </td>
-          </tr>
-          <tr>
-            <td>aria-labelledby</td>
-            <td></td>
-            <td>
-                 <ul>
-                  <li>Used to identify radio group</li>
-                 </ul>
             </td>
           </tr>
         </tbody>
