--- a/examples/link/link.html
+++ b/examples/link/link.html
@@ -17,6 +17,7 @@
   <main role="main">
 
     <h1>Creating links using <code>role=link</code></h1>
+     <p><a href="https://www.w3.org/TR/wai-aria-practices-1.1/#h-link">Authoring Practice Design Patten for Link</a></p>
 
     <p><strong>Note:</strong> When using HTML use the <code>&lt;a&gt;</code> element. It is recommended that authors not re-purpose other elements to create links.</p>
 
