update button link to APG

--- a/examples/button/button.html
+++ b/examples/button/button.html
@@ -17,7 +17,8 @@
   <main role="main">
 
     <h1>Creating Buttons using <code>role=button</code></h1>
-
+    
+    <p><a href="https://www.w3.org/TR/wai-aria-practices-1.1/#h-button">Authoring Practice Design Patten for button</a></p>
     <p><strong>Note:</strong> When using HTML use the <code>&lt;button&gt;</code> element. It is recommended that authors not re-purpose other elements to create buttons.</p>
 
     <h2>Button Examples</h2>
