--- a/examples/radio/radio-1.html
+++ b/examples/radio/radio-1.html
@@ -12,7 +12,7 @@
   <body>
     <main role="main">
       <h1>ARIA <code>radiogroup</code> Example</h1>
-      <p> <a href="../../aria-practices.html#h-radiobutton">WAI-ARIA 1.1 : Radio group pattern </a></p>
+      <p><a href="https://www.w3.org/TR/wai-aria-practices-1.1/#h-radiobutton">Authoring Practice Design Patten for Radio group</a></p>
       <ul>
           <li>The <code>radiogroup</code> role defines a container for a set of ARIA radio buttons.</li>
           <li>The radio button that is currently selected is identified using <code>aria-checked=“true”</code></li>
